Use a static navbar rather than a fixed one.
Previously, links like /documentation/idioms/#incident would cause the target
header to be hidden behind the navbar.

--- a/css/main.css
+++ b/css/main.css
@@ -6,8 +6,6 @@ html {
 body {
   /* Margin bottom by footer height */
   margin-bottom: 102px;
-  /* drop content below navbar */
-  padding-top: 50px;
 }
 
 /* Sticky footer */
